--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,3 @@
-{% extends 'blog/base.html' %}
 <!DOCTYPE html>
 {% load  static %}
 <html lang="en">
@@ -13,18 +12,16 @@
 
     </head>
     <body>
-
-
-{% block content %}
-    {% for post in posts %}
-        <div class="post">
-            <div class="date">
-                {{ post.published_date }}
+    <div class="page-header">
+        <h1><a href="/">Django Girls Blog</a></h1>
+    </div>
+    <div class="content container">
+        <div class="row">
+            <div class="col-md-8">
+            {% block content %}
+            {% endblock %}
             </div>
-            <h1><a href="">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-    {% endfor %}
-{% endblock %}
-    </body>
+    </div>
+</body>
 </html>
