--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,14 +3,17 @@
 <html lang="en">
 
 
-{% block content %}
-    <div class="post">
-        {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
+    <body>
+        {% block content %}
+            <div class="post">
+                {% if post.publish_date %}
+                    <div class="date">
+                        {{ post.publish_date }}
+                    </div>
+                {% endif %}
+                <h1>{{ post.title }}</h1>
+                <p>{{ post.text|linebreaksbr }}</p>
             </div>
-        {% endif %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
-{% endblock %}
+        {% endblock %}
+    </body>
+</html>
