--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,8 +1,10 @@
 {% extends 'blog/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
-
-
+<head>
+    <meta charset="UTF-8">
+    <title>test blog</title>
+</head>
     <body>
         {% block content %}
             <div class="post">
@@ -10,6 +12,9 @@
                     <div class="date">
                         {{ post.publish_date }}
                     </div>
+                {% endif %}
+                {%  if user.is_authenticated %}
+                    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
                 {% endif %}
                 <h1>{{ post.title }}</h1>
                 <p>{{ post.text|linebreaksbr }}</p>
