--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,7 +17,9 @@
                     <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
                 {% endif %}
                 <h1>{{ post.title }}</h1>
+                <p><img src="{{ post.image.url }}" width="50%"></p>
                 <p>{{ post.text|linebreaksbr }}</p>
+                <p>{{ post.url}}</p>
             </div>
         {% endblock %}
     </body>
