--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,7 +16,7 @@
         {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         {% endif %}
-        <h1><a href="/">test blog</a></h1>
+        <h1><a href="/">Baseballzz</a></h1>
     </div>
     <div class="content container">
         <div class="row">
