--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test blog</title>
+    <title>Baseballz</title>
 </head>
     <body>
         {% block content %}
