--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -22,6 +22,7 @@
                 {{ post.published_date }}
             </div>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+{#            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.image.url }}</a></h1>#}
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
